--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <router-outlet></router-outlet>
-<p-timeline [value]="events">
+<p-timeline [value]="events"  align="alternate">
   <ng-template pTemplate="content" let-event>
       {{event.status}}
   </ng-template>
