--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -43,6 +43,7 @@
   background: var(--blue-400);
   margin-bottom: 20px;
   padding: 14px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   .logo {
     color: white;
     font-size: 32px;
