--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -43,10 +43,20 @@
   background: var(--blue-400);
   margin-bottom: 20px;
   padding: 14px;
+  min-height: 66px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   .logo {
     color: white;
     font-size: 32px;
+    float: left;
+    overflow: hidden;
   }
+  .lang-selectors {
+    float: right;
+    .p-button {
+      color: white !important;
+    }
+  }
+
 }
 
