--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="header">
-  <div class="logo">RT</div>
+  <div class="logo">RTimeline</div>
   <div class="lang-selectors">
     <button pButton type="button" label="ru" class="p-button-text" (click)="setLang('ru')"></button>
     <button pButton type="button" label="en" class="p-button-text" (click)="setLang('en')"></button>
