--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="logo">RTimeline</div>
   <div class="lang-selectors">
     <button pButton type="button" label="ru" class="p-button-text" (click)="setLang('ru')"></button>
-    <button pButton type="button" label="en" class="p-button-text" (click)="setLang('en')"></button>
+    <button pButton type="button" label="us" class="p-button-text" (click)="setLang('en')"></button>
   </div>
 </div>
 <p-timeline [value]="events" align="alternate">
